Updated products endpoint
